added add to cart disable button logic

--- a/src/ProductList.css
+++ b/src/ProductList.css
@@ -42,6 +42,13 @@ body {
 }
 
 /* Product Grid */
+.category-center {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 20px;
+}
+
 .product-grid {
     display: flex;
     flex-direction: column;
@@ -63,6 +70,13 @@ body {
 }
 
 /* Product Card */
+.h1-category {
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    display: inline-block;
+    margin-inline: auto;
+}
+
 .product-card {
     flex: 0 0 calc(33.33% - 20px);
     /* Adjust width for 3 cards per row with 20px gap */
@@ -81,7 +95,7 @@ body {
 
 /* Pseudo-classes - Hover effect on product button */
 .product-card:hover {
-    transform: scale(1.05);
+    transform: scale(1.01);
     transition: transform 0.3s ease-in-out;
     z-index: 1;
 }
@@ -103,18 +117,8 @@ body {
     /* Adjust height for better consistency */
 }
 
-.product-button {
-    background-color: #e74c3c;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    transition: background-color 0.3s ease-in-out;
-    margin-top: 10px;
-}
-
-.product-button:hover {
-    background-color: #c0392b;
+.product-button:not(:disabled):hover {
+    background-color: #45a049;
 }
 
 /* Pseudo-elements - Sale badge */
@@ -127,6 +131,12 @@ body {
     right: 0;
     padding: 5px 10px;
     border-radius: 0 0 0 5px;
+}
+
+.product-button:disabled {
+    background-color: #ccc;
+    color: #666;
+    cursor: not-allowed;
 }
 
 .tag_home_link {
@@ -147,6 +157,8 @@ body {
 
 .tag a {
     text-decoration: none;
+    display: flex;
+    gap: 20px;
 }
 
 .tag {
@@ -160,7 +172,7 @@ body {
     height: 70px;
     width: 70px;
     border-radius: 70%;
-
+    flex-shrink: 0;
 }
 
 .luxury {
@@ -228,15 +240,6 @@ body {
     margin: 4px 2px;
     transition-duration: 0.4s;
     cursor: pointer;
-}
-
-.product-button:hover {
-    background-color: #45a049;
-}
-
-.product-button.added-to-cart {
-    background-color: grey;
-    /* Grey when product is added */
 }
 
 @media (max-width: 1200px) {
