--- a/src/ProductList.css
+++ b/src/ProductList.css
@@ -6,6 +6,10 @@ ul {
     padding: 0;
 }
 
+a {
+    cursor: pointer;
+}
+
 /* Set a background color */
 body {
     font-family: Arial, sans-serif;
